[package]
name = "hurtengine"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
log = "0.4"
pretty_env_logger = "0.5"
strum = "0.26"
strum_macros = "0.26"
uuid = { version = "1.12", features = ["v4", "fast-rng", "macro-diagnostics"] }
vulkanalia = { version = "=0.28.0", features = ["libloading", "window"] }
winit = "0.30"
